--- a/application/views/scripts/onibus-intermunicipal/editar.phtml
+++ b/application/views/scripts/onibus-intermunicipal/editar.phtml
@@ -5,7 +5,8 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb" style="background-color:rgba(0,0,0,0.5);">
                     <li class="breadcrumb-item"><a href="<?= $this->baseUrl("secretario") ?>">Início</a></li>
-                    <li class="breadcrumb-item active" style="color:white;" aria-current="page">Cadastrar Ônibus Intermunicipal</li>
+                    <li class="breadcrumb-item"><a href="<?= $this->baseUrl("onibus-intermunicipal") ?>">Ônibus Intermunicipal</a></li>
+                    <li class="breadcrumb-item active" style="color:white;" aria-current="page">Editar</li>
                 </ol>
             </nav>
             <form class="jumbotron" method="post" enctype="multipart/form-data" style="background-color:rgba(0,0,0,0.5); color: white;">
