--- a/application/views/scripts/onibus-urbano/editar.phtml
+++ b/application/views/scripts/onibus-urbano/editar.phtml
@@ -9,6 +9,7 @@
                 </ol>
             
             <form class="jumbotron" method="post" enctype="multipart/form-data" style="background-color:rgba(0,0,0,0.5); color: white;">
+                <div class="form-group">
                 <input type="hidden" id="id_onibus_urbano" value="<? echo $this->onibusUrbano->getId_onibus_urbano() ?>">
                 <div class="row">
                     <div class="col-lg-6">
@@ -114,6 +115,7 @@
                 <button type="button" class="btn btn-primary btn-block editar-onibus-urbano">
                     Confirmar
                 </button>
+                </div>
             </form>
         </div>
     </div>
