--- a/application/views/scripts/beneficio/estudante.phtml
+++ b/application/views/scripts/beneficio/estudante.phtml
@@ -1,25 +1,25 @@
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/categoriaPassageiro.css") ?> />
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12" style="padding: 0px;">
+            <ol class="breadcrumb" style="background-color:rgba(0,0,0,0.5);">
+                <li class="breadcrumb-item"><a href="<?= $this->baseUrl("admin-geral") ?>">Início</a></li>
+                <li class="breadcrumb-item"><a href="<?= $this->baseUrl("beneficio") ?>">Benefícios</a></li>
+                <li class="breadcrumb-item active" style="color: white;" aria-current="page">Estudantes</li>
+            </ol>
+        </div>
 
-<body>
-
-    <div class="container fundo">
-
-        <div class="table-responsive" style="background-color:rgba(0,0,0,0.5); color: white">
-            <table class="table table-bordered text-center" style="background-color:rgba(0,0,0,0.5); color: white">
+        <div class="col-lg-12">
+            <table class="table text-center" style="background-color:rgba(0,0,0,0.5); color: white">
                 <tr class="text-primary">
-                    <th class="fundoTransparente" colspan="4" style="background-color:rgba(0,0,0,0.5); color: white">
+                    <th colspan="4">
                 <center><h3>Novas Solicitações de Benefícios</h3></center>
                 </th>
                 </tr>
                 <tr>
-                    <th class="fundoTransparente" colspan="1" style="background-color:rgba(0,0,0,0.5); color: white"><center>CPF</center></th>
-                <th class="fundoTransparente" colspan="1" style="background-color:rgba(0,0,0,0.5); color: white"><center>Nome</center></th>
-                <th class="fundoTransparente" colspan="1" style="background-color:rgba(0,0,0,0.5); color: white"><center>Data de Solicitação</center></th>
-                <th class="fundoTransparente" colspan="1" style="background-color:rgba(0,0,0,0.5); color: white"><center>Situação</center></th>
+                    <th><center>CPF</center></th>
+                <th><center>Nome</center></th>
+                <th><center>Data de Solicitação</center></th>
+                <th><center>Situação</center></th>
                 </tr>
                 <tr>
                     <? foreach ($this->listarBeneficios as $solicitacaobeneficio): ?>
@@ -35,104 +35,82 @@
                     </tr>
                 <? endforeach; ?>
                 </tr>
-
             </table>
-
         </div>
-        <!-- Modal -->
-        <? foreach ($this->listarBeneficios as $solicitacaobeneficio): ?>
-            <div class="modal fade" id="<?= 'myModal' . $solicitacaobeneficio['id_solicitacao'] ?>" tabindex="-1" role="dialog">
-                <div class="modal-dialog modal-lg" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h4 class="modal-title">ESTUDANTES</h4>
-                            <button type="button" class="close" data-dismiss="modal">
-                                <span>&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
-                            <div class="container-fluid"> 
-                                <div class="row">
-                                    <div class="table-responsive">
-                                        <form method="post">
-                                            <div class="form-group">
-                                                <div class="col-sm-6">
-                                                    <label>Nome completo:</label>
-                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['nome'] ?> " name="nomeCompleto" id="nomeCompleto">
-                                                    <label >Data de nascimento:</label>
-                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['data_nascimento'] ?>" name="dataNascimento" id="dataNascimento">
-                                                    <label >CPF:</label>
-                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['cpf'] ?>" name="cpf" id="cpf">
-                                                    <label >RG:</label>
-                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['rg'] ?>" name="rg" id="rg">
-                                                    <label> Celular: </label>
-                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['celular'] ?>" name="celular" id="celular">
-                                                    <label>Benefício Concedido:</label>
-                                                    <br><select name="beneficio" id="beneficio">
-                                                        <option value="0">Nenhum</option>
-                                                        <option value="1">Meia Passagem</option>
-                                                        <option value="2">Isenção</option>
-                                                    </select>
-                                                    <br><br><button type="button" name="conceder" value="Salvar" id="conceder" class="btn btn-success" 
-                                                                    onclick="editarBeneficio(<?= $solicitacaobeneficio['id_solicitacao'] ?>, beneficio.value)">Salvar
-                                                    </button>
-                                                </div>
-                                                <div class="col-sm-6">
-                                                    <label> Rua: </label>
-                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['rua'] ?>" name="rua" id="rua">
-                                                    <label> Nº: </label>
-                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['numero_casa'] ?>" name="numeroCasa" id="numeroCasa">									
-                                                    <label> Bairro: </label>
-                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['bairro'] ?>" name="bairro" id="bairro">							
-                                                    <label >Comprovante de Matrícula:</label>
-                                                    <br>
-                                                    <button class="btn" name="comprovanteMatricula" value="<?= $solicitacaobeneficio['comprovante_matricula'] ?>" id="comprovanteMatricula">
-                                                        <i class="fa fa-download" style="color:black"></i>
-                                                        <label style="color:black">
-                                                            <a style="color:black" href="dist/autorizaconcessao/comprovantematricula.pdf"
-                                                               download="a">Download </a>
-                                                        </label>
-                                                    </button>
-                                                    <br>
-                                                    <label >Comprovante de Residência:</label>
-                                                    <br>
-                                                    <button class="btn" name="comprovanteResidencia" value="<?= $solicitacaobeneficio['comprovante_residencia'] ?>" id="comprovanteResidencia">
-                                                        <i class="fa fa-download" style="color:black"></i>
-                                                        <label style="color:black">
-                                                            <a style="color:black" href="dist/autorizaconcessao/comprovanteresidencia.pdf"
-                                                               download="a">Download </a>
-                                                        </label>
-                                                    </button>
-                                                </div>
-                                            </div>						
-                                        </form>							
-                                    </div>
-                                </div>
-                            </div>			 
-                        </div>
-
+    </div>
+    <!-- Modal -->
+    <? foreach ($this->listarBeneficios as $solicitacaobeneficio): ?>
+        <div class="modal fade" id="<?= 'myModal' . $solicitacaobeneficio['id_solicitacao'] ?>" tabindex="-1" role="dialog">
+            <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title">ESTUDANTES</h4>
+                        <button type="button" class="close" data-dismiss="modal">
+                            <span>&times;</span>
+                        </button>
                     </div>
+                    <div class="modal-body">
+                        <div class="container-fluid"> 
+                            <div class="row">
+                                <div class="table-responsive">
+                                    <form method="post">
+                                        <div class="form-group">
+                                            <div class="col-sm-6">
+                                                <label>Nome completo:</label>
+                                                <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['nome'] ?> " name="nomeCompleto" id="nomeCompleto">
+                                                <label >Data de nascimento:</label>
+                                                <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['data_nascimento'] ?>" name="dataNascimento" id="dataNascimento">
+                                                <label >CPF:</label>
+                                                <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['cpf'] ?>" name="cpf" id="cpf">
+                                                <label >RG:</label>
+                                                <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['rg'] ?>" name="rg" id="rg">
+                                                <label> Celular: </label>
+                                                <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['celular'] ?>" name="celular" id="celular">
+                                                <label>Benefício Concedido:</label>
+                                                <br><select name="beneficio" id="beneficio">
+                                                    <option value="0">Nenhum</option>
+                                                    <option value="1">Meia Passagem</option>
+                                                    <option value="2">Isenção</option>
+                                                </select>
+                                                <br><br><button type="button" name="conceder" value="Salvar" id="conceder" class="btn btn-success" 
+                                                                onclick="editarBeneficio(<?= $solicitacaobeneficio['id_solicitacao'] ?>, beneficio.value)">Salvar
+                                                </button>
+                                            </div>
+                                            <div class="col-sm-6">
+                                                <label> Rua: </label>
+                                                <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['rua'] ?>" name="rua" id="rua">
+                                                <label> Nº: </label>
+                                                <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['numero_casa'] ?>" name="numeroCasa" id="numeroCasa">									
+                                                <label> Bairro: </label>
+                                                <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['bairro'] ?>" name="bairro" id="bairro">							
+                                                <label >Comprovante de Matrícula:</label>
+                                                <br>
+                                                <button class="btn" name="comprovanteMatricula" value="<?= $solicitacaobeneficio['comprovante_matricula'] ?>" id="comprovanteMatricula">
+                                                    <i class="fa fa-download" style="color:black"></i>
+                                                    <label style="color:black">
+                                                        <a style="color:black" href="dist/autorizaconcessao/comprovantematricula.pdf"
+                                                           download="a">Download </a>
+                                                    </label>
+                                                </button>
+                                                <br>
+                                                <label >Comprovante de Residência:</label>
+                                                <br>
+                                                <button class="btn" name="comprovanteResidencia" value="<?= $solicitacaobeneficio['comprovante_residencia'] ?>" id="comprovanteResidencia">
+                                                    <i class="fa fa-download" style="color:black"></i>
+                                                    <label style="color:black">
+                                                        <a style="color:black" href="dist/autorizaconcessao/comprovanteresidencia.pdf"
+                                                           download="a">Download </a>
+                                                    </label>
+                                                </button>
+                                            </div>
+                                        </div>						
+                                    </form>							
+                                </div>
+                            </div>
+                        </div>			 
+                    </div>
+
                 </div>
             </div>
-        <? endforeach; ?>
-        <script type="text/javascript">
-
-            function editarBeneficio(id, situacao) {
-                var id1 = id;
-                var situacao1 = situacao;
-                $.ajax({
-                    type: "POST",
-                    url: "http://localhost/ProjetoRPV/public/update.php?id=" + id1 + "&situacao=" + situacao1 + "",
-                    async: false,
-                    data: {id: id,
-                        situacao: situacao
-                    },
-                    success: function () {
-                        location.reload();
-                    },
-                    error: function () {
-                    }
-                });
-            }
-        </script>
-</body>
+        </div>
+    <? endforeach; ?>
